--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,14 @@
       <scope>compile</scope>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.uncommons/reportng -->
+    <dependency>
+      <groupId>org.uncommons</groupId>
+      <artifactId>reportng</artifactId>
+      <version>1.1.4</version>
+      <scope>test</scope>
+    </dependency>
+
 
 
     <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
@@ -44,12 +52,14 @@
       <version>2.26.0</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.25.3</version>
       <scope>test</scope>
     </dependency>
+
   </dependencies>
 
   <build>
